--- a/FAQ-accordion-card/index.html
+++ b/FAQ-accordion-card/index.html
@@ -13,28 +13,29 @@
                 <img src="./assets/illustration-box-desktop.svg" alt="box" class="box">
                 <img src="./assets/illustration-woman-online-mobile.svg" alt="woman standing before a screen" class="main-img">
             </div>
-            <h1>FAQ</h1>
-            <section>
-                <p class="question">How many team members can I invite?<p>
-                <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
-            </section>
-            <section>
-                <p class="question">What is the maximum file upload size?</p>
-                <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
-            </section>
-            <section>
-                <p class="question">How do I reset my password?</p>
-                <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
-            </section>
-            <section>
-                <p class="question">Can I cancel my subscription?</p>
-                <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
-            </section>
-            <section>
-                <p class="question">Do you provide additional support?</p>
-                <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-            </section>
-    </div>
-        
+            <div class="text-container">
+                <h1>FAQ</h1>
+                <section>
+                    <h2 class="question">How many team members can I invite?</h2>
+                    <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+                </section>
+                <section>
+                    <h2 class="question">What is the maximum file upload size?</h2>
+                    <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                </section>
+                <section>
+                    <h2 class="question">How do I reset my password?</h2>
+                    <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+                </section>
+                <section>
+                    <h2 class="question">Can I cancel my subscription?</h2>
+                    <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
+                </section>
+                <section>
+                    <h2 class="question">Do you provide additional support?</h2>
+                    <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                </section>
+            </div>
+        </div>
     </body>
 </html>
