--- a/FAQ-accordion-card/index.html
+++ b/FAQ-accordion-card/index.html
@@ -16,35 +16,35 @@
             <div class="text-container">
                 <h1>FAQ</h1>
                 <section>
-                    <div class="question-line">
+                    <div class="accordion-head">
                         <h2 class="question">How many team members can I invite?</h2>
                         <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
                 </section>
                 <section>
-                    <div class="question-line">
+                    <div class="accordion-head">
                         <h2 class="question">What is the maximum file upload size?</h2>
                         <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
                 </section>
                 <section>
-                    <div class="question-line">
+                    <div class="accordion-head">
                         <h2 class="question">How do I reset my password?</h2>
                         <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
                 </section>
                 <section>
-                    <div class="question-line">
+                    <div class="accordion-head">
                         <h2 class="question">Can I cancel my subscription?</h2>
                         <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
                 </section>
                 <section>
-                    <div class="question-line">
+                    <div class="accordion-head">
                         <h2 class="question">Do you provide additional support?</h2>
                         <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
