--- a/FAQ-accordion-card/index.html
+++ b/FAQ-accordion-card/index.html
@@ -5,7 +5,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>FAQ accordion card</title>
        <link rel="stylesheet" href="./css/style.css">
-       <script src="./app.js"></script>
+       <script src="./app.js" defer></script>
     </head>
     <body>
         <div class="container">
