--- a/FAQ-accordion-card/index.html
+++ b/FAQ-accordion-card/index.html
@@ -11,7 +11,10 @@
         <div class="container">
             <div class="image-container">
                 <img src="./assets/illustration-box-desktop.svg" alt="box" class="box">
-                <img src="./assets/illustration-woman-online-mobile.svg" alt="woman standing before a screen" class="main-img">
+                <picture>
+                    <source media="(min-width: 740px)" srcset="../assets/illustration-woman-online-desktop.svg">
+                    <img src="./assets/illustration-woman-online-mobile.svg" alt="woman standing before a screen" class="main-img">
+                </picture>
             </div>
             <div class="text-container">
                 <h1>FAQ</h1>
