--- a/FAQ-accordion-card/index.html
+++ b/FAQ-accordion-card/index.html
@@ -8,51 +8,53 @@
        <script src="./app.js" defer></script>
     </head>
     <body>
-        <div class="container">
-            <div class="image-container">
+        <div class="relative-wrap">
+            <div class="container">
                 <img src="./assets/illustration-box-desktop.svg" alt="box" class="box">
-                <picture>
-                    <source media="(min-width: 740px)" srcset="../assets/illustration-woman-online-desktop.svg">
-                    <img src="./assets/illustration-woman-online-mobile.svg" alt="woman standing before a screen" class="main-img">
-                </picture>
-            </div>
-            <div class="text-container">
-                <h1>FAQ</h1>
-                <section>
-                    <div class="accordion-head">
-                        <h2 class="question">How many team members can I invite?</h2>
-                        <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
-                    </div>
-                    <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
-                </section>
-                <section>
-                    <div class="accordion-head">
-                        <h2 class="question">What is the maximum file upload size?</h2>
-                        <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
-                    </div>
-                    <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
-                </section>
-                <section>
-                    <div class="accordion-head">
-                        <h2 class="question">How do I reset my password?</h2>
-                        <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
-                    </div>
-                    <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
-                </section>
-                <section>
-                    <div class="accordion-head">
-                        <h2 class="question">Can I cancel my subscription?</h2>
-                        <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
-                    </div>
-                    <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
-                </section>
-                <section>
-                    <div class="accordion-head">
-                        <h2 class="question">Do you provide additional support?</h2>
-                        <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
-                    </div>
-                    <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-                </section>
+                <div class="image-container">
+                    <picture>
+                        <source media="(min-width: 840px)" srcset="../assets/illustration-woman-online-desktop.svg">
+                        <img src="./assets/illustration-woman-online-mobile.svg" alt="woman standing before a screen" class="main-img">
+                    </picture>
+                </div>
+                <div class="text-container">
+                    <h1>FAQ</h1>
+                    <section>
+                        <div class="accordion-head">
+                            <h2 class="question">How many team members can I invite?</h2>
+                            <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
+                        </div>
+                        <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+                    </section>
+                    <section>
+                        <div class="accordion-head">
+                            <h2 class="question">What is the maximum file upload size?</h2>
+                            <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
+                        </div>
+                        <p class="answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                    </section>
+                    <section>
+                        <div class="accordion-head">
+                            <h2 class="question">How do I reset my password?</h2>
+                            <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
+                        </div>
+                        <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+                    </section>
+                    <section>
+                        <div class="accordion-head">
+                            <h2 class="question">Can I cancel my subscription?</h2>
+                            <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
+                        </div>
+                        <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
+                    </section>
+                    <section>
+                        <div class="accordion-head">
+                            <h2 class="question">Do you provide additional support?</h2>
+                            <img src="./assets/icon-arrow-down.svg" alt="arrow" class="arrow">
+                        </div>
+                        <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                    </section>
+                </div>
             </div>
         </div>
     </body>
