Set up SCSS partials

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -8,24 +8,26 @@
         <script src="./app.js" defer></script>
     </head>
     <body>
-        <header class="header left-align">
-            <div class="star-container">
-                <img src="./assets/icon-star.svg" alt="star" class="star-icon">
+        <div class="card">
+            <header class="header left-align">
+                <div class="star-container">
+                    <img src="./assets/icon-star.svg" alt="star" class="star-icon">
+                </div>
+            </header>
+            <main class="text left-align">
+                <h1>How did we do?</h1>
+                <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+            </main>
+            <div class="rating-area">
+                <ul class="rating-list">
+                    <li class="rating">1</li>
+                    <li class="rating">2</li>
+                    <li class="rating">3</li>
+                    <li class="rating">4</li>
+                    <li class="rating">5</li>
+                </ul>
+                <button type="submit">Submit</button>
             </div>
-        </header>
-        <main class="text left-align">
-            <h1>How did we do?</h1>
-            <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-        </main>
-        <div class="rating-area">
-            <ul class="rating-list">
-                <li class="rating">1</li>
-                <li class="rating">2</li>
-                <li class="rating">3</li>
-                <li class="rating">4</li>
-                <li class="rating">5</li>
-            </ul>
-            <button type="submit">Submit</button>
         </div>
     </body>
 </html>
