Add JS for choosing a rating

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -23,7 +23,7 @@
                     <li class="rating">1</li>
                     <li class="rating">2</li>
                     <li class="rating">3</li>
-                    <li class="rating active">4</li>
+                    <li class="rating">4</li>
                     <li class="rating">5</li>
                 </ul>
                 <button type="submit">Submit</button>
