Add card change on submit

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -14,7 +14,7 @@
                     <img src="./assets/icon-star.svg" alt="star" class="star-icon">
                 </div>
             </header>
-            <main class="text left-align">
+            <main class="text">
                 <h1>How did we do?</h1>
                 <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
             </main>
@@ -26,7 +26,7 @@
                     <li class="rating">4</li>
                     <li class="rating">5</li>
                 </ul>
-                <button type="submit">Submit</button>
+                <button id='submit-btn' type="submit">Submit</button>
             </div>
         </div>
     </body>
