Add form styling

--- a/intro-component-with-signup-form/index.html
+++ b/intro-component-with-signup-form/index.html
@@ -15,10 +15,10 @@
     </header>
     <main>
         <div class="trial">
-            <p class="trial-para"><span class="free-periood">Try it free 7 days</span> then $20/mo. thereafter</p>
+            <p class="trial-para"><span class="free-period">Try it free 7 days</span> then $20/mo. thereafter</p>
         </div>
         <div class="form-container">
-            <form action="?" mathod="post" id="signup-form">
+            <form action="?" method="post" id="signup-form">
                 <input type="text" name="user-firstname" id="user-firstname" placeholder="First Name" required>
                 <input type="text" name="user-lastname" id="user-lastname" placeholder="Last Name" required>
                 <input type="email" name="user-email" id="user-email" placeholder="Email Adress" required>
