--- a/intro-component-with-signup-form/index.html
+++ b/intro-component-with-signup-form/index.html
@@ -20,9 +20,13 @@
         <div class="form-container">
             <form action="?" method="post" id="signup-form">
                 <input type="text" name="user-firstname" id="user-firstname" placeholder="First Name" required>
+                <span></span>
                 <input type="text" name="user-lastname" id="user-lastname" placeholder="Last Name" required>
+                <span></span>
                 <input type="email" name="user-email" id="user-email" placeholder="Email Adress" required pattern="^[\w\d\.-]+@[a-zA-Z-]+\.[a-zA-Z]+(\.[a-zA-Z]+)?$">
+                <span></span>
                 <input type="password" name="user-pass" id="user-pass" placeholder="Password" required minlength="8">
+                <span></span>
                 <button type="submit" class="submit-btn">CLAIM YOUR FREE TRIAL</button>
             </form>
             <p class="tos-para">By clicking the button you are agreeing to our <a href="#">Terms of Services</a></p>
