--- a/intro-component-with-signup-form/index.html
+++ b/intro-component-with-signup-form/index.html
@@ -20,22 +20,22 @@
         <div class="form-container">
             <form action="?" method="post" id="signup-form">
                 <div class="input-group">
-                    <input type="text" name="user-firstname" id="user-firstname" placeholder=" " required>
+                    <input type="text" name="user-firstname" id="user-firstname" placeholder="First Name" required>
                     <label for="user-firstname">First Name</label>
                     <span></span>
                 </div>
                 <div class="input-group">
-                    <input type="text" name="user-lastname" id="user-lastname" placeholder=" " required>
+                    <input type="text" name="user-lastname" id="user-lastname" placeholder="Last Name" required>
                     <label for="user-firstname">Last Name</label>
                     <span></span>
                 </div>
                 <div class="input-group">
-                    <input type="email" name="user-email" id="user-email" placeholder=" " required pattern="^[\w\d\.-]+@[a-zA-Z-]+\.[a-zA-Z]+(\.[a-zA-Z]+)?$">
+                    <input type="email" name="user-email" id="user-email" placeholder="Email Adress" required pattern="^[\w\d\.-]+@[a-zA-Z-]+\.[a-zA-Z]+(\.[a-zA-Z]+)?$">
                     <label for="user-firstname">Email Adress</label>
                     <span></span>
                 </div>
                 <div class="input-group">
-                    <input type="password" name="user-pass" id="user-pass" placeholder=" " required minlength="8">
+                    <input type="password" name="user-pass" id="user-pass" placeholder="Password" required minlength="8">
                     <label for="user-firstname">Password</label>
                     <span></span>
                 </div>
